2006-09-06  Michal Ludvig  <michal@logix.cz>

	* Check for MySQL version both in configure.in and
	  when actually connecting the server.
	* Fixed a few minor omissions. Now it should run again
	  even on other machines than my one ;-)

2006-09-04  Michal Ludvig  <michal@logix.cz>

	* Fixed write() to actually do what a decent write() is
	  supposed to do.
	* Pulled 'data' column to a separate table.
	* Implemented truncate(), symlink(), readlink()
	* Implemented limited rename() only for regular files
	* Added better logging infrastructure, converted
	  all plain printf() calls to log_printf()
	* Removed autogenerated files from CVS.
	* Various cleanups and improvements on autoconfig front.
	* Minor cleanups here and there.

2006-07-23  Tsukasa Hamano <code@cuspy.org>

	* Released 0.2

2006-06-08  Tsukasa Hamano <code@cuspy.org>

	* Released 0.1